Finished x control and corrected first chapter

--- a/Slike/jr3_coordinatesistem.tex
+++ b/Slike/jr3_coordinatesistem.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{./Slike/jr3_coordinatesistem.eps}
-	\caption{}
+	\includegraphics[scale=0.5]{./Slike/jr3_coordinatesistem.eps}
+	\caption{Koordinatni sistem senzorja sile ter koordinatni sistem težišča prijemala}
 	\label{fig:jr3_coordinatesistem}
 \end{figure}
