--- a/literatura.bib
+++ b/literatura.bib
@@ -54,6 +54,13 @@
 	address = {Ljubljana}
 }
 
+@book{zupancic_tr,
+	title={Teorija regulacij},
+	author={Zupan\v{c}i\v{c}, Borut},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
+
 @book{lenarcic_robotmeh,
 	title={Robotski mehanizmi},
 	author={Lenar\v{c}i\v{c}, Jadran and Bajd, Tadej},
