--- a/macros.tex
+++ b/macros.tex
@@ -3,3 +3,6 @@
 \newcommand{\simulink}{SIMULINK\textsuperscript{\textregistered}}
 \newcommand{\matsim}{MATLAB\textsuperscript{\textregistered} SIMULINK\textsuperscript{\textregistered}}
 \newcommand{\thom}{$\textbf{T}^i_{i+1}$}
+\newcommand{\Lagrt}{\mathcal{T}}
+\newcommand{\Lagrl}{\mathcal{L}}
+\newcommand{\Lagru}{\mathcal{U}}
