Dynamic model almost done

--- a/Slike/jr3_coordinatesistem.tex
+++ b/Slike/jr3_coordinatesistem.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.5]{./Slike/jr3_coordinatesistem.eps}
-	\caption{Koordinatni sistem senzorja sile ter koordinatni sistem težišča prijemala}
+	\caption{Koordinatni sistem senzorja sile ter koordinatni sistem te\v{z}i\v{s}\v{c}a prijemala}
 	\label{fig:jr3_coordinatesistem}
 \end{figure}
