--- a/literatura.bib
+++ b/literatura.bib
@@ -13,7 +13,7 @@
 }
 @misc{jr3_doc_ext,
 	author = "JR3, INC.",
-	title = "{JR3, Installation manual for force - torque sensors with external electronics}",
+	title = "{JR3, Installation manual for force - torque sensors with internal electronics}",
 	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
 	note = "[Dostopano: 6. 17. 2015]"
 }
